--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "massive": "^5.5.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-popup": "^0.9.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "react-tabs": "^2.3.0",
+    "reactjs-popup": "^1.3.0",
     "redux": "^4.0.1"
   },
   "scripts": {
