--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "react-stripe-checkout": "^2.6.3",
     "react-tabs": "^2.3.0",
     "reactjs-popup": "^1.3.0",
     "redux": "^4.0.1"
