--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "2.0.5",
     "react-slideshow-image": "^1.0.7",
     "react-stripe-checkout": "^2.6.3",
+    "react-super-responsive-table": "^4.3.3",
     "react-tabs": "^2.3.0",
     "reactjs-popup": "^1.3.0",
     "redux": "^4.0.1"
