--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "express-sessions": "^1.0.6",
+    "express-session": "^1.15.6",
     "massive": "^5.5.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
