--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
@@ -21,7 +22,8 @@
     "react-super-responsive-table": "^4.3.3",
     "react-tabs": "^2.3.0",
     "reactjs-popup": "^1.3.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "stripe": "^6.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
